Fixed spacing for #scroll-top-button

--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -240,8 +240,6 @@
 #scroll-top-button {
 	z-index: $z-scroll-top-button;
 	position: fixed;
-	margin-right: 16px;
-	margin-bottom: 16px;
 	right: 16px;
 	bottom: 16px;
 	cursor: pointer;
